--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "svelte-kit start"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-static": "1.0.0-next.4",
+    "@sveltejs/kit": "1.0.0-next.83",
     "svelte": "^3.29.0",
     "vite": "^2.1.0",
     "autoprefixer": "^10.2.5",
