--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "start": "svelte-kit start"
+    "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "1.0.0-next.4",
-    "@sveltejs/kit": "1.0.0-next.83",
+    "@sveltejs/adapter-static": "1.0.0-next.9",
+    "@sveltejs/kit": "1.0.0-next.104",
     "svelte": "^3.29.0",
-    "vite": "^2.1.0",
     "autoprefixer": "^10.2.5",
     "cssnano": "^5.0.0",
     "postcss": "^8.2.10",
