--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "1.0.0-next.9",
-    "@sveltejs/kit": "1.0.0-next.107",
+    "@sveltejs/adapter-static": "1.0.0-next.4",
+    "@sveltejs/kit": "1.0.0-next.83",
+    "vite": "^2.1.0",
     "svelte": "^3.29.0",
     "autoprefixer": "^10.2.5",
     "cssnano": "^5.0.0",
